add_library(csapp STATIC lib/csapp.c)
add_library(csapp::csapp ALIAS csapp)
target_include_directories(csapp PUBLIC lib)

add_subdirectory(chapter02)
add_subdirectory(chapter03)
add_subdirectory(chapter05)
add_subdirectory(chapter07)
add_subdirectory(chapter08)
add_subdirectory(chapter09)
add_subdirectory(chapter10)
